results/SVCOMP/4-shot/log-ExSymExe18-2024_03_18_18_38_57.txt
class Main {
  static int field;
  static int field2;

  //@ ensures \result <==> test(x, field, field2);
  public static boolean f() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }
  
  //@ requires x == 3;
  //@ requires z == 9;
  //@ requires r == 0;
  //@ ensures \result <==> (z * x <= x * r);
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe18");
    int y = 3;
    x = x * r;
    z = z * x;
    r = y * x;
    if (z > x) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x > r) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe18.java:5: error: cannot find symbol
  //@ ensures \result <==> test(x, field, field2);
                                ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe18.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> test(x, field, field2);
                                   ^
/home/max/Documents/JMLGPT/tmp/ExSymExe18.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> test(x, field, field2);
                                          ^
3 errors

